updates up to chapter 6

--- a/ch_02/1-pandas_data_structures.ipynb
+++ b/ch_02/1-pandas_data_structures.ipynb
@@ -44,20 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5,)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.shape"
    ]
@@ -77,7 +66,7 @@
     {
      "data": {
       "text/plain": [
-       "dtype([('time', '<U23'), ('place', '<U37'), ('magType', '<U3'), ('mag', '<f8'), ('alert', '<U5'), ('tsunami', '<i4')])"
+       "dtype([('time', '<U23'), ('place', '<U37'), ('magType', '<U3'), ('mag', '<f8'), ('alert', '<U5'), ('tsunami', '<i8')])"
       ]
      },
      "execution_count": 3,
@@ -105,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.74 µs ± 177 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "3.44 µs ± 171 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -171,7 +160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.22 µs ± 100 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "2 µs ± 95.8 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -410,7 +399,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 2, 3, 4], dtype=int64)"
+       "array([0, 1, 2, 3, 4])"
       ]
      },
      "execution_count": 14,
@@ -748,7 +737,7 @@
        "magType     object\n",
        "mag        float64\n",
        "alert       object\n",
-       "tsunami      int32\n",
+       "tsunami      int64\n",
        "dtype: object"
       ]
      },
@@ -966,6 +955,13 @@
    "source": [
     "df + df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -984,7 +980,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
