--- a/ch_03/5-handling_data_issues.ipynb
+++ b/ch_03/5-handling_data_issues.ipynb
@@ -32,10 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "import pandas as pd\n",
     "\n",
     "df = pd.read_csv('data/dirty_data.csv')"
@@ -2477,7 +2478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
